feat(examples): add demo app config YAML and populate notebook outputs
- Added app_config_demo.yaml: Example configuration for cache, monitoring, ingestion, vector stores, embeddings, LLM prompts, and entity extraction to guide users on setup.
- Updated cache_metrics_demo.ipynb: Populated cell outputs with execution results, updated execution counts, and refined output formatting for better demonstration of cache and metrics functionality. This makes the notebook immediately runnable and informative without manual execution.

--- a/examples/cache_metrics_demo.ipynb
+++ b/examples/cache_metrics_demo.ipynb
@@ -59,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1baf1d22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cache_dir = Path(\"demo_state/cache_metrics_demo\").resolve()\n",
     "metrics_dir = Path(\"demo_state/metrics_metrics_demo\").resolve()\n",
@@ -84,10 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9e12ba66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First ingestion - loader runs and data is cached.\n",
+      "Documents loaded: 1\n",
+      "Loader run count: 1\n",
+      "{'source': 'https://example.com/demo-summary', 'loader_run': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"First ingestion - loader runs and data is cached.\")\n",
     "first_docs = loader_service.ingest_documents([REMOTE_DOC_URL])\n",
@@ -99,10 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "404fa9db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache hit: True\n",
+      "Cached metadata: {'source': 'https://example.com/demo-summary', 'loader_run': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "cached = cache_manager.get_from_cache(\"website\", REMOTE_DOC_URL)\n",
     "print(\"Cache hit:\", bool(cached))\n",
@@ -112,10 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1c995952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Second ingestion - should reuse the cached payload.\n",
+      "Loader run count (should be unchanged): 1\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Second ingestion - should reuse the cached payload.\")\n",
     "second_docs = loader_service.ingest_documents([REMOTE_DOC_URL])\n",
@@ -124,10 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e842f285",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clearing cache and ingesting again (loader runs once more).\n",
+      "Loader run count: 2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Clearing cache and ingesting again (loader runs once more).\")\n",
     "loader_service.clear_cache(\"website\", REMOTE_DOC_URL)\n",
@@ -137,10 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "18673f22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recent ingestion sessions:\n",
+      "- f4f7972f-1513-43dd-8f42-8615e5144939 processed 1 docs with success rate 100.0%\n",
+      "- aeec1164-092b-4adc-b27a-56e5c7b6acb8 processed 1 docs with success rate 100.0%\n",
+      "- 8cb8533d-af88-4f68-ad3e-abd5d2b1c076 processed 1 docs with success rate 100.0%\n",
+      "- eefbedb2-69d1-47c8-9036-c7cd32b3edbd processed 1 docs with success rate 100.0%\n",
+      "- 893738eb-b97e-403d-91e5-726b30db74a9 processed 1 docs with success rate 100.0%\n",
+      "Aggregate metrics (past week):\n",
+      "  total_sessions: 9\n",
+      "  total_documents: 9\n",
+      "  total_sources: 9\n",
+      "  successful_sources: 9\n",
+      "  failed_sources: 0\n",
+      "  avg_success_rate: 1.0\n",
+      "  avg_documents_per_source: 1.0\n",
+      "  avg_processing_time_ms: 0.6666666666666666\n",
+      "  by_source_type: {'website': {'count': 9, 'success_count': 9, 'document_count': 9, 'total_processing_time_ms': 6, 'avg_processing_time_ms': 0.6666666666666666, 'avg_documents': 1.0, 'success_rate': 1.0}}\n"
+     ]
+    }
+   ],
    "source": [
     "recent_sessions = metrics_manager.get_recent_sessions(limit=5)\n",
     "print(\"Recent ingestion sessions:\")\n",
@@ -151,53 +223,69 @@
     "    )\n",
     "\n",
     "aggregate = metrics_manager.get_aggregate_metrics(days=7)\n",
-   "print(\"Aggregate metrics (past week):\")\n",
-   "for key, value in aggregate.items():\n",
-   "    print(f\"  {key}: {value}\")\n"
-  ]
- },
+    "print(\"Aggregate metrics (past week):\")\n",
+    "for key, value in aggregate.items():\n",
+    "    print(f\"  {key}: {value}\")\n"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1f0f8881",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session latency: 0.00s\n",
+      "Docs/sec: 286.70 (1 docs total)\n",
+      "Success rate: 100.0%\n",
+      "Sources processed: 1\n",
+      "Source failures: 0\n",
+      "Sample source \"https://example.com/demo-summary\": 1 docs, 1 ms, 0 bytes, success=True\n",
+      "\\nWeekly aggregate breakdown by source type:\n",
+      "- website: avg docs 1.0, success 100.0%, avg latency 1 ms\n",
+      "Overall weekly success rate: 100.0%, avg docs/source 1.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# Derived metrics make the session information more explicit.\\n",
-    "extra_session = metrics_manager.get_recent_sessions(limit=1)\\n",
-    "if extra_session:\\n",
-    "    session_metrics = extra_session[0]\\n",
-    "    duration = session_metrics.get(\"duration_seconds\") or 0\\n",
-    "    document_count = session_metrics.get(\"document_count\", 0)\\n",
-    "    docs_per_second = document_count / duration if duration else 0\\n",
-    "    print(f\"Session latency: {duration:.2f}s\")\\n",
-    "    print(f\"Docs/sec: {docs_per_second:.2f} ({document_count} docs total)\")\\n",
-    "    print(f\"Success rate: {session_metrics.get(\"success_rate\", 0):.1%}\")\\n",
-    "    source_metrics = session_metrics.get(\"sources\", {})\\n",
-    "    print(f\"Sources processed: {len(source_metrics)}\")\\n",
-    "    failures = sum(1 for metrics in source_metrics.values() if not metrics.get(\"success\"))\\n",
-    "    print(f\"Source failures: {failures}\")\\n",
-    "    if source_metrics:\\n",
-    "        sample_id, sample_metrics = next(iter(source_metrics.items()))\\n",
-    "        print(\\n",
-    "            f\"Sample source \\\"{sample_id}\\\": {sample_metrics.get(\"document_count\", 0)} docs, \"\\n",
-    "            f\"{sample_metrics.get(\"processing_time_ms\", 0):.0f} ms, \"\\n",
-    "            f\"{sample_metrics.get(\"bytes\", 0)} bytes, success={sample_metrics.get(\"success\")}\"\\n",
-    "        )\\n",
-    "else:\\n",
-    "    print(\"No sessions have been recorded yet; run ingestion to capture derived metrics.\")\\n",
-    "weekly_aggregate = metrics_manager.get_aggregate_metrics(days=7)\\n",
-    "print(\"\\\\nWeekly aggregate breakdown by source type:\")\\n",
-    "for source_type, stats in weekly_aggregate.get(\"by_source_type\", {}).items():\\n",
-    "    print(\\n",
-    "        f\"- {source_type}: avg docs {stats.get(\"avg_documents\", 0):.1f}, \"\\n",
-    "        f\"success {stats.get(\"success_rate\", 0):.1%}, \"\\n",
-    "        f\"avg latency {stats.get(\"avg_processing_time_ms\", 0):.0f} ms\"\\n",
-    "    )\\n",
-    "print(\\n",
-    "    f\"Overall weekly success rate: {weekly_aggregate.get(\"avg_success_rate\", 0):.1%}, \"\\n",
-    "    f\"avg docs/source {weekly_aggregate.get(\"avg_documents_per_source\", 0):.2f}\"\\n",
-    ")\\n"
+    "# Derived metrics make the session information more explicit.\n",
+    "extra_session = metrics_manager.get_recent_sessions(limit=1)\n",
+    "if extra_session:\n",
+    "    session_metrics = extra_session[0]\n",
+    "    duration = session_metrics.get(\"duration_seconds\") or 0\n",
+    "    document_count = session_metrics.get(\"document_count\", 0)\n",
+    "    docs_per_second = document_count / duration if duration else 0\n",
+    "    print(f\"Session latency: {duration:.2f}s\")\n",
+    "    print(f\"Docs/sec: {docs_per_second:.2f} ({document_count} docs total)\")\n",
+    "    print(f\"Success rate: {session_metrics.get(\"success_rate\", 0):.1%}\")\n",
+    "    source_metrics = session_metrics.get(\"sources\", {})\n",
+    "    print(f\"Sources processed: {len(source_metrics)}\")\n",
+    "    failures = sum(1 for metrics in source_metrics.values() if not metrics.get(\"success\"))\n",
+    "    print(f\"Source failures: {failures}\")\n",
+    "    if source_metrics:\n",
+    "        sample_id, sample_metrics = next(iter(source_metrics.items()))\n",
+    "        print(\n",
+    "            f\"Sample source \\\"{sample_id}\\\": {sample_metrics.get(\"document_count\", 0)} docs, \"\n",
+    "            f\"{sample_metrics.get(\"processing_time_ms\", 0):.0f} ms, \"\n",
+    "            f\"{sample_metrics.get(\"bytes\", 0)} bytes, success={sample_metrics.get(\"success\")}\"\n",
+    "        )\n",
+    "else:\n",
+    "    print(\"No sessions have been recorded yet; run ingestion to capture derived metrics.\")\n",
+    "weekly_aggregate = metrics_manager.get_aggregate_metrics(days=7)\n",
+    "print(\"\\nWeekly aggregate breakdown by source type:\")\n",
+    "for source_type, stats in weekly_aggregate.get(\"by_source_type\", {}).items():\n",
+    "    print(\n",
+    "        f\"- {source_type}: avg docs {stats.get(\"avg_documents\", 0):.1f}, \"\n",
+    "        f\"success {stats.get(\"success_rate\", 0):.1%}, \"\n",
+    "        f\"avg latency {stats.get(\"avg_processing_time_ms\", 0):.0f} ms\"\n",
+    "    )\n",
+    "print(\n",
+    "    f\"Overall weekly success rate: {weekly_aggregate.get(\"avg_success_rate\", 0):.1%}, \"\n",
+    "    f\"avg docs/source {weekly_aggregate.get(\"avg_documents_per_source\", 0):.2f}\"\n",
+    ")"
    ]
   },
   {
