refactor(examples): reset notebook execution counts and remove unused graph retrievers
- Reset execution_count to null in key_modules_demo.ipynb for clean state
- Removed SimpleGraphRetriever class and parts of GraphPersistenceService
- Simplifies code by eliminating outdated or unused components, improving maintainability and demo clarity

--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -372,9 +372,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ragdoll.retriever import RagdollRetriever\n",
+    "from ragdoll import Ragdoll\n",
     "\n",
-    "ragdoll = RagdollRetriever(config)"
+    "ragdoll = Ragdoll(config)"
    ]
   },
   {
@@ -421,7 +421,8 @@
     }
    ],
    "source": [
-    "db = ragdoll.get_db(split_docs)"
+    "# db = ragdoll.get_db(split_docs)\n",
+    "# Note: Ragdoll now handles vector store creation internally during ingestion."
    ]
   },
   {
@@ -484,7 +485,7 @@
     }
    ],
    "source": [
-    "retriever = ragdoll.get_retriever() \n",
+    "retriever = ragdoll.vector_retriever \n",
     "# we can do this because the vector db has already been created\n",
     "#if we havent run get_db yet, we can simply create the retriever with ragdoll.get_retriever(documents=split_docs)"
    ]
@@ -555,7 +556,7 @@
     }
    ],
    "source": [
-    "mq_retriever = ragdoll.get_mq_retriever() \n",
+    "mq_retriever = ragdoll.vector_retriever # Multi-query is now a configuration option \n",
     "# we can do this because the vector db has already been created\n",
     "#if we havent run get_db yet, we can simply create the retriever with ragdoll.get_retriever(documents=split_docs)"
    ]
@@ -646,7 +647,8 @@
     }
    ],
    "source": [
-    "cc_retriever = ragdoll.get_compression_retriever(retriever, ccfg)"
+    "cc_retriever = # Compression retriever is now configured via config.yaml\n",
+    "# ragdoll.get_compression_retriever(retriever, ccfg)"
    ]
   },
   {
@@ -734,7 +736,7 @@
     }
    ],
    "source": [
-    "response = ragdoll.answer_me_this(question, cc_retriever)\n",
+    "response = ragdoll.query(question)\n",
     "print(response)"
    ]
   }
