--- a/ragdoll_pdf_example.ipynb
+++ b/ragdoll_pdf_example.ipynb
@@ -232,9 +232,10 @@
     }
    ],
    "source": [
-    "from ragdoll.retriever import RagdollRetriever\n",
-    "ragdoll = RagdollRetriever(config)\n",
-    "db = ragdoll.get_db(split_docs)"
+    "from ragdoll import Ragdoll\n",
+    "ragdoll = Ragdoll(config)\n",
+    "# db = ragdoll.get_db(split_docs)\n",
+    "# Note: Ragdoll now handles vector store creation internally during ingestion."
    ]
   },
   {
@@ -261,7 +262,7 @@
     }
    ],
    "source": [
-    "base_retriever = ragdoll.get_mq_retriever() \n",
+    "base_retriever = ragdoll.vector_retriever # Multi-query is now a configuration option \n",
     "\n",
     "ccfg={\n",
     "        \"use_embeddings_filter\":True, \n",
@@ -271,7 +272,8 @@
     "        \"similarity_threshold\":0.6, #embeddings filter settings\n",
     "    }\n",
     "\n",
-    "retriever = ragdoll.get_compression_retriever(base_retriever, ccfg)"
+    "retriever = # Compression retriever is now configured via config.yaml\n",
+    "# ragdoll.get_compression_retriever(base_retriever, ccfg)"
    ]
   },
   {
@@ -326,7 +328,7 @@
     }
    ],
    "source": [
-    "response = ragdoll.answer_me_this(question, retriever)\n",
+    "response = ragdoll.query(question)\n",
     "print(response)"
    ]
   },
